# vtkosmos

./: LICENSE  README.md  config.sh.example  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-05-15-resample-with-optional-crop.md
docs/superpowers/specs/: 2026-05-15-resample-with-optional-crop-design.md
scripts/: record_menu.py
src/vtermkosmos/: __init__.py  cli_ui.py  main.py  menu.py  processor.py
