[project]
name = "vtkosmos"
version = "0.1.0"
description = "Vision Terminal Kosmos - Image and video processing CLI, organized."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Helton Maia", email = "helton.maia@ufrn.br" },
]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "opencv-python>=4.9.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "pyfiglet>=1.0.2",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
vterm = "vtermkosmos.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtermkosmos"]

[tool.uv]
dev-dependencies = []
